Update dependencies and clean up pom.xml